# mai-os-lab-work

./: CMakeLists.txt  README.md
CP/: CMakeLists.txt  CP.docx  config.json  main.cpp
CP/doc/: CP.docx
CP/include/: tools.h
CP/src/: tools.cpp
LW1/: 1.docx  CMakeLists.txt  main.c
LW1/doc/: 1.docx
LW1/include/: parent.h  utils.h
LW1/src/: child1.c  child2.c  parent.c  utils.c
LW2/: 2.docx  CMakeLists.txt  main.c
LW2/doc/: 2.docx
LW2/include/: semaphore.h  utils.h
LW2/src/: semaphore.c  utils.c
LW3/: 3.docx  CMakeLists.txt
LW3/doc/: 3.docx
LW3/src/: child1.c  child2.c  parent.c
LW4/: 4.docx  CMakeLists.txt  dynamic_main.c  linking_main.c
LW4/doc/: 4.docx
LW4/include/: headers.h
LW4/src/: first_implementation.c  second_implementation.c
LW567/: 567.docx  main.cpp
LW567/include/: controller.h  tools.h  worker.h
LW567/src/: controller.cpp  tools.cpp  worker.cpp
LW8/: 8.docx
tests/: CMakeLists.txt  cp_test.cpp  lab1_test.cpp  lab2_test.cpp  lab3_test.cpp  lab4_test.cpp  lab567_test.cpp
